--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,3 +5,7 @@
 * {
     font-family: 'Lato', sans-serif;
 }
+
+.nav-links {
+  @apply  hover:scale-105 cursor-pointer underline text-white text-xs font-black leading-5 italic underline-offset-4
+}
